--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "my-app",
+  "name": "quickstart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "cdbreact": "^1.5.7",
+    "maplibre-gl": "^2.1.9",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-map-gl": "^7.0.16",
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-pro-sidebar": "^1.0.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
